--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.3.0",
+    "react-schedule-selector": "^3.0.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
