--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "devDependencies": {
     "@iconify/react": "^3.0.1",
     "autoprefixer": "^9.8.8",
+    "chokidar-cli": "^3.0.0",
+    "concurrently": "^6.3.0",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   }
